Add further tests